config/prow/cluster/grandmatriarch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grandmatriarch
  namespace: test-pods
  labels:
    app: grandmatriarch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grandmatriarch
  template:
    metadata:
      labels:
        app: grandmatriarch
    spec:
      serviceAccountName: grandmatriarch
      containers:
      - name: bakery
        image: zhanghe:5000/k8s-prow/grandmatriarch:v20200924-e60bf413ff
        args:
        - http-cookiefile
