config/prow/cluster/needs-rebase_deployment.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: needs-rebase
  labels:
    app: needs-rebase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: needs-rebase
  template:
    metadata:
      labels:
        app: needs-rebase
    spec:
      terminationGracePeriodSeconds: 180
      containers:
      - name: needs-rebase
        image: zhanghe:5000/k8s-prow/needs-rebase:v20200924-e60bf413ff
        imagePullPolicy: Always
        args:
        - --dry-run=false
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - name: hmac
          mountPath: /etc/webhook
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
      volumes:
      - name: hmac
        secret:
          secretName: hmac-token
      - name: oauth
        secret:
          secretName: oauth-token
      - name: plugins
        configMap:
          name: plugins
