config/prow/cluster/pipeline_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prow-pipeline
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prow-pipeline
  template:
    metadata:
      labels:
        app: prow-pipeline
    spec:
      serviceAccountName: prow-pipeline
      containers:
      - name: pipeline
        image: zhanghe:5000/k8s-prow/pipeline:v20200924-e60bf413ff
        args:
        - --all-contexts
        - --config=/etc/prow-config/config.yaml
        - --kubeconfig=/etc/kubeconfig/config
        volumeMounts:
        - mountPath: /etc/kubeconfig
          name: kubeconfig
          readOnly: true
        - mountPath: /etc/prow-config
          name: prow-config
          readOnly: true
      volumes:
      - name: kubeconfig
        secret:
          defaultMode: 420
          secretName: kubeconfig
      - name: prow-config
        configMap:
          name: config
