config/prow/cluster/plank_deployment.yaml
# Copyright 2017 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: plank
  labels:
    app: plank
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plank
  template:
    metadata:
      labels:
        app: plank
    spec:
      serviceAccountName: plank
      containers:
      - name: plank
        image: zhanghe:5000/k8s-prow/plank:v20200924-e60bf413ff
        args:
        - --config-path=/etc/config/config.yaml
        - --dry-run=false
        - --job-config-path=/etc/job-config
        - --kubeconfig=/etc/kubeconfig/config
        - --skip-report=true
        volumeMounts:
        - mountPath: /etc/kubeconfig
          name: kubeconfig
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
      volumes:
      - name: kubeconfig
        secret:
          defaultMode: 420
          secretName: kubeconfig
      - name: oauth
        secret:
          secretName: oauth-token
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
