config/prow/cluster/tot_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: tot
  labels:
    app: tot
spec:
  replicas: 1  # one canonical source of build numbers
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tot
  template:
    metadata:
      labels:
        app: tot
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: tot
        image: zhanghe:5000/k8s-prow/tot:v20200924-e60bf413ff
        imagePullPolicy: Always
        args:
        - -storage=/store/tot.json
        - -fallback
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - mountPath: /store
          name: tot-volume
      volumes:
        - name: tot-volume
          persistentVolumeClaim:
            claimName: tot-storage
