config/prow/cluster/tls-ing_ingress.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: tls-ing
spec:
  rules:
  - host: prow.cloudminds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: deck
            port: 
              number: 80
      - path: /hook
        pathType: Prefix
        backend:
          service: 
            name: hook
            port: 
              number: 8888
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: pushgateway-external
            port: 
              number: 80
  tls:
    - hosts:
      - prow.cloudminds.com
      secretName: tls-ing
